data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1191.wast
;; 2. **Test 2:** Place `unreachable` inside a loop but after a `br_if` to check if the loop terminates based on the condition before reaching `unreachable`.    - **Constraint:** Validate that conditional branching works and allows the trap to occur.    - **Relation to Infinite Loops:** Ensures conditional exit prevents infinite loop despite an `unreachable` statement.

(assert_invalid
  (module (func $test-unreachable-in-loop-after-br_if
    (loop
      (br_if 1 (i32.const 1))
      (unreachable)
    )
  ))
  "type mismatch"
)